--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
     "name": "node-boilerplates",
-    "version": "0.1.0",
+    "version": "0.0.1",
     "title": "Node Boilerplates",
+    "private": true,
     "author": "Vitor Britto <code@vitorbritto.com.br>",
     "description": "A jump-start for my projects.",
+    "scripts": {
+        "start": "node newproject.js",
+    },
     "repository": {
         "type": "git",
         "url": "git://github.com/vitorbritto/node-boilerplates.git"
     },
+    "keywords": [
+        "boilerplates",
+        "generator",
+        "nodejs",
+        "static generators",
+        "blog plataform"
+    ],
     "dependencies": {
         "shelljs": "~0.2.6",
         "cli-color": "~0.2.2",
