--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "node-boilerplates",
     "version": "0.0.1",
     "title": "Node Boilerplates",
-    "private": true,
-    "author": "Vitor Britto <code@vitorbritto.com.br>",
     "description": "A jump-start for my projects.",
+    "private": true,
+    "author": {
+        "name": "Vitor Britto",
+        "email": " code@vitorbritto.com.br"
+    },
     "scripts": {
         "start": "node newproject.js",
     },
@@ -12,13 +15,6 @@
         "type": "git",
         "url": "git://github.com/vitorbritto/node-boilerplates.git"
     },
-    "keywords": [
-        "boilerplates",
-        "generator",
-        "nodejs",
-        "static generators",
-        "blog plataform"
-    ],
     "dependencies": {
         "shelljs": "~0.2.6",
         "cli-color": "~0.2.2",
