--- a/lib/templates/docpad/package.json
+++ b/lib/templates/docpad/package.json
@@ -1,42 +1,40 @@
 {
     "name": "project-name",
     "version": "0.1.0",
-    "title": "Project Name",
-    "description": "Project description goes here",
+    "private": true,
+    "title": "My new project",
+    "description": "A simples description goes here",
     "author": {
         "name": "Vitor Britto",
-        "url": "http://vitorbritto.com"
+        "email": "code@vitorbritto.com.br",
+        "url": "http://vitorbritto.com.br"
     },
-    "keywords": [
-        "boilerplate",
-        "project",
-        "grunt",
-        "bower",
-        "docpad"
-    ],
+    "keywords": [],
     "repository": {
         "type": "git",
-        "url": "git://github.com/vitorbritto/boilerplates.git"
+        "url": "git://github.com/username/repository.git"
     },
     "bugs": {
-        "url": "https://github.com/vitorbritto/boilerplates/issues"
+        "url": "https://github.com/username/repository/issues"
     },
     "main": "node_modules/docpad/bin/docpad-server",
     "scripts": {
-        "start": "node_modules/docpad/bin/docpad-server"
+        "deploy": "node_modules/docpad/bin/docpad deploy-ghpages --env static",
+        "generate": "node_modules/docpad/bin/docpad generate --env static",
+        "watch": "node_modules/docpad/bin/docpad run"
     },
     "engines": {
         "node": "0.10",
         "npm": "1.3"
     },
     "dependencies": {
-        "docpad": "~6.57.0",
-        "docpad-plugin-jade": "~2.6.0",
-        "docpad-plugin-stylus": "~2.5.0",
-        "docpad-plugin-marked": "~2.1.2",
-        "docpad-plugin-livereload": "~2.5.3"
-    },
-    "devDependencies": {
+        "docpad": "6.x",
+        "docpad-plugin-jade": "*",
+        "docpad-plugin-stylus": "2.x",
+        "docpad-plugin-marked": "2.x",
+        "docpad-plugin-cleanurls": "*",
+        "docpad-plugin-partials": "2.x",
+        "docpad-plugin-livereload": "*",
         "grunt": "~0.4.2",
         "grunt-contrib-jshint": "~0.6.4",
         "grunt-contrib-uglify": "~0.2.4",
