--- a/lib/templates/general/src/bower.json
+++ b/lib/templates/general/src/bower.json
@@ -1,20 +1,24 @@
 {
-  "name": "projectname",
-  "version": "0.1.0",
-  "main": "bower",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "components"
-  ],
-  "readme": "",
-  "description": "",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/vitorbritto/boilerplate.git"
-  },
-  "dependencies": {
-    "modernizr": "~2.6.2",
-    "jquery": "~1.10.2"
-  }
+    "name": "Project Name",
+    "version": "0.1.0",
+    "homepage": "http://www.projectpage.com",
+    "authors": [
+        "Vitor Britto <code@vitorbritto.com.br>"
+    ],
+    "description": "Some description here.",
+    "keywords": [
+        "template",
+        "boilerplate"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "components"
+    ],
+    "dependencies": {
+        "modernizr": "~2.6.2",
+        "jquery": "~1.10.2"
+    }
 }
