--- a/lib/templates/jekyll/bower.json
+++ b/lib/templates/jekyll/bower.json
@@ -1,25 +1,25 @@
 {
-  "name": "projectname",
-  "version": "1.0.0",
-  "authors": [
-    "Vitor Britto <email@domain.com.br>"
-  ],
-  "license": "MIT",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "components",
-    "test",
-    "tests"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/username/repository.git"
-  },
-  "dependencies": {
-    "jquery": "~2.0.3",
-    "modernizr": "~2.6.2"
-  }
+    "name": "Project Name",
+    "version": "0.1.0",
+    "homepage": "http://www.projectpage.com",
+    "authors": [
+        "Vitor Britto <code@vitorbritto.com.br>"
+    ],
+    "description": "Some description here.",
+    "keywords": [
+        "jekyll",
+        "template",
+        "static generator"
+    ],
+    "license": "MIT",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "components"
+    ],
+    "dependencies": {
+        "modernizr": "~2.6.2",
+        "jquery": "~1.10.2"
+    }
 }
