--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,12 @@
 # http://editorconfig.org
 root = true
 
+
+# General Files
 [*]
-indent_style = space
-indent_size = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+indent_style = space
+indent_size = 4
