--- a/lib/templates/benmstack/src/bower.json
+++ b/lib/templates/benmstack/src/bower.json
@@ -26,10 +26,14 @@
         "jquery": "~1.10.2",
         "backbone": "~1.1.0",
         "underscore": "~1.5.2",
-        "backbone.marionette": "~1.4.1"
+        "backbone.marionette": "~1.4.1",
+        "requirejs": "~2.1.10",
+        "requirejs-text": "~2.0.5",
     },
-        "devDependencies": {
-        "jasmine": "~1.3.1"
+    "devDependencies": {
+        "mocha": "~1.17.1",
+        "chai": "~1.9.0",
+        "sinon": "~1.8.2"
     },
     "exportsOverride": {
         "jquery": {
@@ -43,7 +47,6 @@
         },
         "backbone.marionette": {
             "js": "lib/backbone.marionette.js"
-        },
-        "jasmine": {}
+        }
     }
 }
