--- a/lib/templates/general/.jshintrc
+++ b/lib/templates/general/.jshintrc
@@ -2,7 +2,6 @@
     "asi": false,
     "bitwise": true,
     "boss": true,
-    "browser": true,
     "curly": true,
     "debug": false,
     "eqeqeq": true,
@@ -45,5 +44,15 @@
     "trailing": true,
     "undef": true,
     "unused": true,
-    "white": false
+    "white": false,
+
+    "browser": true,
+
+    "globals": {
+        "_": false,
+        "Backbone": false,
+        "Marionette": false,
+        "jQuery": false
+    }
+
 }
