--- a/lib/templates/rails/Gemfile
+++ b/lib/templates/rails/Gemfile
@@ -22,3 +22,6 @@ group :development do
     gem "therubyracer"
     gem 'growl_notify', '0.0.3'
 end
+
+# Use Capistrano for deployment
+# gem 'capistrano', group: :development
