--- a/lib/templates/rails/bower.json
+++ b/lib/templates/rails/bower.json
@@ -7,7 +7,7 @@
     ],
     "description": "Some description here.",
     "keywords": [
-        "benm stack",
+        "rails app",
         "template",
         "backbone",
         "underscore"
