--- a/lib/templates/benmstack/src/bower.json
+++ b/lib/templates/benmstack/src/bower.json
@@ -28,12 +28,11 @@
         "underscore": "~1.5.2",
         "backbone.marionette": "~1.4.1",
         "requirejs": "~2.1.10",
-        "requirejs-text": "~2.0.5",
+        "requirejs-text": "~2.0.5"
     },
     "devDependencies": {
         "mocha": "~1.17.1",
-        "chai": "~1.9.0",
-        "sinon": "~1.8.2"
+        "chai": "~1.9.0"
     },
     "exportsOverride": {
         "jquery": {
