--- a/lib/templates/benmstack/src/package.json
+++ b/lib/templates/benmstack/src/package.json
@@ -1,63 +1,67 @@
 {
-  "name": "application-name",
-  "version": "0.1.0",
-  "title": "Project Name",
-  "description": "Project description goes here",
-  "private": true,
-  "author": {
-    "name": "Vitor Britto",
-    "url": "http://vitorbritto.com.br",
-    "email": "code@vitorbritto.com.br"
-  },
-  "engines": {
-    "node": "0.10.x"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "bugs": {
-    "url": "https://github.com/vitorbritto/boilerplates/issues"
-  },
-  "dependencies": {
-    "express": "3.3.4",
-    "nodemon": "*",
-    "mongoose": "~3.8.3",
-    "MD5": "~1.2.0"
-  },
-  "devDependencies": {
-    "bower": "~1.2.8",
-    "grunt": "~0.4.1",
-    "karma": "~0.10.8",
-    "chai": "~1.9.0",
-    "sinon": "~1.8.1",
-    "sinon-chai": "~2.5.0",
-    "proxyquire": "~0.5.2",
-    "browserify": "2.36.1",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.3",
-    "grunt-contrib-stylus": "~0.13.2",
-    "grunt-contrib-jade": "~0.11.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-bower-task": "~0.3.4",
-    "grunt-browserify": "~1.3.0",
-    "grunt-nodemon": "~0.1.2",
-    "grunt-concurrent": "~0.4.2",
-    "grunt-simple-mocha": "~0.4.0",
-    "grunt-karma": "~0.6.2",
-    "grunt-shell-spawn": "~0.3.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.4",
-    "karma-requirejs": "~0.2.0",
-    "karma-coffee-preprocessor": "~0.1.1",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.1",
-    "karma-firefox-launcher": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.1"
-  }
+    "name": "application-name",
+    "version": "0.1.0",
+    "title": "Project Name",
+    "description": "Project description goes here",
+    "private": true,
+    "author": {
+        "name": "Vitor Britto",
+        "url": "http://vitorbritto.com.br",
+        "email": "code@vitorbritto.com.br"
+    },
+    "engines": {
+        "node": "0.10.x",
+        "npm": "1.4.x"
+    },
+    "scripts": {
+        "start": "node server.js"
+    },
+    "bugs": {
+        "url": "https://github.com/vitorbritto/boilerplates/issues"
+    },
+    "dependencies": {
+        "express": "3.3.4",
+        "nodemon": "*",
+        "mongoose": "~3.8.3",
+        "MD5": "~1.2.0"
+    },
+    "devDependencies": {
+        "karma": "~0.10.8",
+        "chai": "~1.9.0",
+        "load-grunt-tasks": "~0.2.0",
+        "time-grunt": "~0.2.3",
+        "grunt": "~0.4.2",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-stylus": "~0.9.0",
+        "grunt-contrib-jade": "~0.8.0",
+        "grunt-contrib-jshint": "~0.8.0",
+        "grunt-contrib-uglify": "~0.2.7",
+        "grunt-contrib-copy": "~0.5.0",
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-contrib-compress": "~0.6.0",
+        "grunt-processhtml": "~0.3.0",
+        "grunt-bower-task": "~0.3.4",
+        "grunt-nodemon": "~0.1.2",
+        "grunt-concurrent": "~0.4.2",
+        "grunt-simple-mocha": "~0.4.0",
+        "grunt-shell-spawn": "~0.3.0",
+        "grunt-karma": "~0.8.2",
+        "grunt-karma-coveralls": "~2.3.0",
+        "karma-mocha": "~0.1.0",
+        "karma-script-launcher": "~0.1.0",
+        "karma-chrome-launcher": "~0.1.1",
+        "karma-firefox-launcher": "~0.1.2",
+        "karma-phantomjs-launcher": "~0.1.1",
+        "karma-coverage": "~0.2.0"
+    },
+    "peerDependencies": {
+        "bower": "*",
+        "grunt-cli": "*",
+        "coveralls": "*"
+    },
+
+    "scripts": {
+        "test": "grunt karma:run"
+    }
 }
+
