--- a/lib/templates/meanstack/src/.jshintrc
+++ b/lib/templates/meanstack/src/.jshintrc
@@ -12,7 +12,6 @@
     "expr": true,
     "forin": true,
     "funcscope": false,
-    "jquery": true,
     "globalstrict": false,
     "immed": true,
     "indent": 4,
@@ -27,7 +26,6 @@
     "multistr": false,
     "newcap": true,
     "noarg": true,
-    "node": true,
     "noempty": true,
     "nomen": false,
     "onevar": true,
@@ -49,7 +47,10 @@
     "browser": true,
 
     "globals": {
-        "jQuery": false
+        "node": false,
+        "jquery": false,
+        "angular": false,
+        "node": false
     }
 
 }
