--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,10 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 indent_size = 4
+
+# Specific Files
+[{*.styl, *.jade, *.coffee, *.sass, *.haml, *.rb, *.json}]
+indent_size = 2
+tab_width = 2
+indent_style = space
+insert_final_newline = false
