--- a/lib/templates/mobile/.jshintrc
+++ b/lib/templates/mobile/.jshintrc
@@ -12,7 +12,6 @@
     "expr": true,
     "forin": true,
     "funcscope": false,
-    "jquery": true,
     "globalstrict": false,
     "immed": true,
     "indent": 4,
@@ -27,7 +26,6 @@
     "multistr": false,
     "newcap": true,
     "noarg": true,
-    "node": true,
     "noempty": true,
     "nomen": false,
     "onevar": true,
@@ -45,14 +43,14 @@
     "undef": true,
     "unused": true,
     "white": false,
-
     "browser": true,
-
+    "node": true,
+    "jquery": true,
+    "phantom": true,
     "globals": {
-        "_": false,
         "Backbone": false,
         "Marionette": false,
-        "jQuery": false
+        "angular": false,
+        "_": false
     }
-
 }
