Remove "./src" folder (files on root directory now)

--- a/lib/templates/nodeapi/package.json
+++ b/lib/templates/nodeapi/package.json
@@ -14,7 +14,8 @@
     "project",
     "gulp",
     "nodejs",
-    "expressjs"
+    "expressjs",
+    "restful api"
   ],
   "repository": {
     "type": "git",
