--- a/lib/templates/meanstack/.travis.yml
+++ b/lib/templates/meanstack/.travis.yml
@@ -1,7 +1,18 @@
 language: node_js
+
 node_js:
   - "0.10"
+
 env:
-  - NODE_ENV=travis
+  - NODE_ENV=development
+
 services:
   - mongodb
+
+branches:
+  only:
+    - master
+
+before_install:
+  - npm install -gq grunt-cli bower coveralls
+  - bower install
