--- a/lib/templates/nodeapi/package.json
+++ b/lib/templates/nodeapi/package.json
@@ -32,12 +32,14 @@
     "url": "https://github.com/vitorbritto/boilerplates/blob/master/LICENSE"
   },
   "dependencies": {
-    "express": "3.3.4"
+    "express": "^3.5.2",
+    "mongoose": "^3.8.8",
+    "chai": "^1.8.1",
+    "mocha": "^1.10.0",
+    "forever": "latest"
   },
   "devDependencies": {
-    "mocha": "~1.10.0",
-    "chai": "~1.8.0",
-    "gulp": "~3.5.0",
+    "gulp": "^3.5.6",
     "gulp-mocha": "~0.4.1",
     "gulp-nodemon": "^1.0.2",
     "gulp-jshint": "~1.3.4",
