--- a/lib/templates/meanstack/bower.json
+++ b/lib/templates/meanstack/bower.json
@@ -7,12 +7,22 @@
     ],
     "description": "Some description here.",
     "keywords": [
-        "mean stack",
-        "template",
-        "angularjs",
-        "nodejs",
+        "browserify",
+        "angular",
+        "jade",
+        "stylus",
+        "NIB",
+        "mongodb",
+        "mongoose",
+        "Nodejs",
         "express",
-        "mongodb"
+        "karma",
+        "mocha",
+        "chai",
+        "supertest",
+        "superagent",
+        "gulp",
+        "nodemon"
     ],
     "license": "MIT",
     "ignore": [
@@ -21,12 +31,15 @@
         "bower_components",
         "components",
         "test",
-        "tests"
+        "tests",
+        "spec",
+        "specs"
     ],
     "dependencies": {
-        "modernizr": "~2.6.2",
-        "jquery": "~1.10.2",
-        "angular": "~1.2"
+        "modernizr": "latest",
+        "jquery": "latest",
+        "angular": "latest",
+        "angular-route": "latest"
     },
     "devDependencies": {
         "chai": "*",
