--- a/lib/templates/meanstack/package.json
+++ b/lib/templates/meanstack/package.json
@@ -1,81 +1,83 @@
 {
-  "name": "project-name",
-  "version": "0.1.0",
-  "title": "Project Title",
-  "homepage": "www.domain.com",
-  "description": "Projct description goes here",
   "private": true,
+  "name": "application-name",
+  "version": "0.1.0",
+  "title": "Project Name",
+  "description": "Project description goes here",
   "author": {
     "name": "Vitor Britto",
-    "url": "http://vitorbritto.com.br"
+    "url": "http://vitorbritto.com.br",
+    "email": "code@vitorbritto.com.br"
   },
   "keywords": [
     "boilerplate",
-    "grunt"
+    "gulp",
+    "nodejs",
+    "express",
+    "framework",
+    "mean stack",
+    "template",
+    "angularjs",
+    "mongodb"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/vitorbritto/gruntify.git"
+    "url": "git://github.com/vitorbritto/boilerplates.git"
   },
   "bugs": {
-    "url": "https://github.com/vitorbritto/gruntify/issues"
+    "url": "https://github.com/vitorbritto/boilerplates/issues"
+  },
+  "licenses": {
+    "type": "MIT",
+    "url": "https://github.com/vitorbritto/boilerplates/blob/master/LICENSE"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "test": "karma start ./config/test.js",
+    "install": "bower install"
   },
   "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=1.1.0"
+    "node": "~0.10.0"
   },
   "dependencies": {
     "express": "^4.1.1",
+    "jade": "~1.3.0",
+    "stylus": "0.42.3",
+    "nib": "^1.0.2",
+    "mongoose": "^3.8.8",
+    "connect-mongo": "~0.4.0",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "method-override": "^1.0.0",
-    "jade": "~1.3.0",
-    "stylus": "0.42.3",
+    "errorhandler": "^1.0.0",
+    "moment": "~2.6.0",
+    "express-session": "^1.0.4",
+    "compression": "^1.0.1",
+    "winston": "~0.7.3",
     "forever": "*",
-    "mongoose": "^3.8.8",
-    "grunt": "^0.4.4",
-    "browserify": "^3.44.2",
-    "chai": "*",
-    "mocha": "*"
+    "lodash": "~2.4.1",
+    "napa": "~0.3.0"
   },
   "devDependencies": {
-    "time-grunt": "^0.3.1",
-    "load-grunt-tasks": "^0.4.0",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-compress": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-browser-sync": "^0.8.2",
-    "grunt-nodemon": "^0.2.1",
-    "grunt-bump": "0.0.13",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-imageoptim": "^1.4.1",
-    "grunt-concurrent": "^0.5.0",
-    "grunt-rsync": "^0.5.0",
-    "grunt-ftp-deploy": "^0.1.2",
-    "grunt-contrib-csslint": "^0.2.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-stylus": "^0.15.0",
-    "grunt-contrib-less": "^0.11.0",
-    "grunt-contrib-compass": "^0.7.2",
-    "grunt-contrib-htmlmin": "^0.2.0",
-    "grunt-contrib-jade": "^0.11.0",
-    "grunt-handlebars": "^0.0.6",
-    "grunt-contrib-requirejs": "^0.4.3",
-    "grunt-umd": "^1.7.3",
-    "grunt-browserify": "^2.0.8",
-    "grunt-contrib-jasmine": "^0.6.3",
-    "grunt-contrib-qunit": "^0.4.0",
-    "grunt-mocha": "^0.4.10",
-    "grunt-karma": "^0.8.2",
-    "grunt-karma-coveralls": "^2.3.0",
-    "karma-jasmine": "^0.1.0",
-    "karma-mocha": "^0.1.0",
-    "karma-qunit": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.0",
-    "karma-coverage": "^0.1.0"
+    "gulp": "^3.6.2",
+    "gulp-mocha": "^0.4.1",
+    "gulp-nodemon": "^1.0.2",
+    "gulp-uglify": "^0.3.0",
+    "gulp-jshint": "^1.5.5",
+    "jshint-stylish": "^0.2.0",
+    "gulp-load-plugins": "^0.5.1",
+    "gulp-changed": "^0.3.0",
+    "gulp-clean": "^0.2.4",
+    "gulp-livereload": "^1.5.0",
+    "gulp-header": "^1.0.2",
+    "gulp-imagemin": "^0.5.0",
+    "gulp-browserify": "0.2.x",
+    "mocha": "^1.18.2",
+    "chai": "~1.9.1",
+    "supertest": "~0.12.0",
+    "superagent": "^0.18.0",
+    "karma": "latest"
   }
 }
