Update Rails Boilerplate

--- a/lib/templates/rails/Gemfile
+++ b/lib/templates/rails/Gemfile
@@ -10,16 +10,15 @@ group :development do
     gem 'compass-h5bp'
     gem 'sass', '~>3.1'
     gem 'haml', '~>3.1'
-    gem 'guard'
     gem 'guard-compass'
     gem 'guard-process'
     gem 'juicer'
     gem 'guard-haml', '~> 0.3'
-    gem "guard-coffeescript", "~> 0.5.4"
+    gem 'guard-coffeescript', '~> 0.5.4'
     gem 'guard-livereload', '~>0.3'
-    gem "uglifier"
-    gem "guard-uglify"
-    gem "therubyracer"
+    gem 'uglifier'
+    gem 'guard-uglify'
+    gem 'therubyracer'
     gem 'growl_notify', '0.0.3'
 end
 
