--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .DS_Store
 node_modules
-lib/templates/mobile/*
+lib/templates/lamstack
+lib/templates/laravel
+lib/templates/mobile
+lib/templates/mobile
+lib/templates/rails
+lib/templates/sinatra
+lib/templates/spa
+lib/templates/webapp
