Update B.E.N.M. Stack Boilerplate

--- a/lib/templates/benmstack/.jshintrc
+++ b/lib/templates/benmstack/.jshintrc
@@ -48,25 +48,25 @@
     "jquery"        : true,
     "phantom"       : true,
     "globals": {
-        "require"    : false,
-        "Backbone"   : false,
-        "Marionette" : false,
-        "angular"    : false,
-        "jasmine"    : false,
-        "$scope"     : false,
-        "_"          : false,
-        "jQuery"     : false,
-        "$"          : false,
-        "console"    : false,
-        "require"    : false,
-        "process"    : false,
-        "__dirname"  : false,
-        "exports"    : false,
-        "describe"   : false,
-        "it"         : false,
-        "before"     : false,
-        "beforeEach" : false,
-        "after"      : false,
-        "afterEach"  : false
+        "require"    : true,
+        "Backbone"   : true,
+        "Marionette" : true,
+        "angular"    : true,
+        "jasmine"    : true,
+        "$scope"     : true,
+        "_"          : true,
+        "jQuery"     : true,
+        "$"          : true,
+        "console"    : true,
+        "require"    : true,
+        "process"    : true,
+        "__dirname"  : true,
+        "exports"    : true,
+        "describe"   : true,
+        "it"         : true,
+        "before"     : true,
+        "beforeEach" : true,
+        "after"      : true,
+        "afterEach"  : true
     }
 }
