Add Docs Folder

--- a/lib/templates/webapp/package.json
+++ b/lib/templates/webapp/package.json
@@ -36,28 +36,35 @@
     "nib": "^1.0.2",
     "lodash": "~2.4.1",
     "jquery": "^2.1.1",
-    "backbone": "^1.1.2"
-  },
-  "devDependencies": {
-    "gulp": "^3.6.2",
-    "gulp-mocha": "^0.4.1",
-    "gulp-uglify": "^0.3.0",
-    "gulp-jshint": "^1.5.5",
-    "jshint-stylish": "^0.2.0",
-    "gulp-load-plugins": "^0.5.1",
-    "gulp-changed": "^0.3.0",
-    "gulp-clean": "^0.2.4",
-    "gulp-livereload": "^1.5.0",
-    "gulp-header": "^1.0.2",
-    "gulp-imagemin": "^0.5.0",
-    "gulp-browserify": "0.2.x",
+    "backbone": "^1.1.2",
+    "browserify": "^4.0.0",
     "mocha": "^1.18.2",
     "chai": "~1.9.1",
     "karma": "latest",
+    "jadeify": "^2.3.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "time-grunt": "^0.3.1",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-compress": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-browser-sync": "^0.9.1",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-csslint": "^0.2.0",
+    "grunt-contrib-stylus": "^0.15.0",
+    "grunt-imageoptim": "^1.4.1",
+    "grunt-browserify": "^2.0.8",
+    "grunt-karma": "^0.8.2",
+    "grunt-karma-coveralls": "^2.3.0",
+    "karma-browserify": "0.0.6",
     "karma-mocha": "~0.1",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.1",
     "karma-firefox-launcher": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.1"
+    "karma-phantomjs-launcher": "~0.1.1",
+    "karma-coverage": "^0.2.4"
   }
 }
