--- a/lib/templates/meanstack/.travis.yml
+++ b/lib/templates/meanstack/.travis.yml
@@ -14,5 +14,4 @@ branches:
     - master
 
 before_install:
-  - npm install -gq gulp coveralls
-  - bower install
+  - npm install -gq grunt coveralls
