--- a/lib/templates/spa/.travis.yml
+++ b/lib/templates/spa/.travis.yml
@@ -3,16 +3,5 @@ language: node_js
 node_js:
   - "0.10"
 
-env:
-  - NODE_ENV=development
-
-services:
-  - mongodb
-
-branches:
-  only:
-    - master
-
 before_install:
-  - npm install -gq grunt-cli bower coveralls
-  - bower install
+  - npm install -gq grunt coveralls
