--- a/lib/templates/webapp/.travis.yml
+++ b/lib/templates/webapp/.travis.yml
@@ -3,15 +3,5 @@ language: node_js
 node_js:
   - "0.10"
 
-env:
-  - NODE_ENV=development
-
-services:
-  - mongodb
-
-branches:
-  only:
-    - master
-
 before_install:
-  - npm install -gq gulp coveralls
+  - npm install -gq grunt coveralls
