--- a/lib/templates/nodewebkit/src/package.json
+++ b/lib/templates/nodewebkit/src/package.json
@@ -5,7 +5,7 @@
   "homepage": "www.projectname.com",
   "license": "MIT",
   "scripts": {
-    "install": "grunt"
+    "build": "grunt"
   },
   "devDependencies": {
     "chai": "*",
