--- a/lib/templates/general/src/package.json
+++ b/lib/templates/general/src/package.json
@@ -13,6 +13,9 @@
     "node": ">=0.10.0",
     "npm": ">=1.1.0"
   },
+  "dependencies": {
+    "browserify": "^4.0.0"
+  },
   "devDependencies": {
     "grunt": "^0.4.4",
     "time-grunt": "^0.3.1",
@@ -22,9 +25,10 @@
     "grunt-contrib-compress": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-browser-sync": "^0.9.1",
+    "grunt-browserify": "^2.0.8",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-imageoptim": "^1.4.1",
-    "grunt-contrib-compass": "^0.7.2"
+    "grunt-contrib-compass": "^0.7.2",
+    "grunt-ftp-deploy": "^0.1.3"
   }
 }
