--- a/lib/templates/wpplugin/package.json
+++ b/lib/templates/wpplugin/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "grunt": "^0.4.4",
     "grunt-browserify": "^3.0.1",
+    "grunt-checktextdomain": "^0.1.1",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-compress": "^0.8.0",
@@ -30,9 +31,10 @@
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-po2mo": "^0.1.0",
+    "grunt-pot": "^0.2.0",
     "grunt-rsync": "^0.6.2",
     "grunt-shell": "^1.1.1",
-    "grunt-wp-i18n": "^0.4.8",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   }
