--- a/init/templates/wpplugin/.editorconfig
+++ b/init/templates/wpplugin/.editorconfig
@@ -1,19 +1,19 @@
-# editorconfig.org
+# http://editorconfig.org
 root = true
 
+
+# General Files
 [*]
-charset = utf-8
 end_of_line = lf
-indent_size = 4
-tab_width = 4
-indent_style = tab
-insert_final_newline = true
+charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
+indent_style = space
+indent_size = 4
 
-[{*.txt, *.md}]
-trim_trailing_whitespace = false
-
-[*.json]
-insert_final_newline = false
+# Specific Files
+[*.{styl,jade,coffee,sass,haml,rb,json}]
 indent_size = 2
 tab_width = 2
+indent_style = space
+insert_final_newline = false
