--- a/init/templates/jscomponent/package.json
+++ b/init/templates/jscomponent/package.json
@@ -1,11 +1,12 @@
 {
   "name": "jscomponent",
   "version": "0.1.0",
+  "title": "",
+  "homepage": "",
   "description": "",
+  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
+  "license": "MIT",
   "main": "index.js",
-  "engines": {
-    "node": ">=0.10.0"
-  },
   "scripts": {
     "test": "mocha"
   },
@@ -16,12 +17,9 @@
   "keywords": [
     "jscomponent"
   ],
-  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/vitorbritto/jscomponent/issues"
   },
-  "homepage": "https://github.com/vitorbritto/jscomponent",
   "devDependencies": {
     "chai": "*",
     "mocha": "*"
