--- a/init/templates/meanstack/package.json
+++ b/init/templates/meanstack/package.json
@@ -1,14 +1,12 @@
 {
   "private": true,
-  "name": "application-name",
+  "name": "MEANstack",
   "version": "0.1.0",
-  "title": "Project Name",
-  "description": "Project description goes here",
-  "author": {
-    "name": "Vitor Britto",
-    "url": "http://vitorbritto.com.br",
-    "email": "code@vitorbritto.com.br"
-  },
+  "title": "",
+  "homepage": "",
+  "description": "",
+  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
+  "license": "MIT",
   "keywords": [
     "boilerplate",
     "gulp",
@@ -26,13 +24,6 @@
   },
   "bugs": {
     "url": "https://github.com/vitorbritto/boilerplates/issues"
-  },
-  "licenses": {
-    "type": "MIT",
-    "url": "http://vitorbritto.mit-license.org/"
-  },
-  "engines": {
-    "node": "~0.10.0"
   },
   "scripts": {
     "install": "napa"
