--- a/init/templates/reactflux/package.json
+++ b/init/templates/reactflux/package.json
@@ -1,14 +1,11 @@
 {
   "private": true,
-  "name": "application-name",
+  "name": "reactflux",
   "version": "0.1.0",
-  "title": "Project Name",
-  "description": "Project description goes here",
-  "author": {
-    "name": "Vitor Britto",
-    "url": "http://vitorbritto.com.br",
-    "email": "code@vitorbritto.com.br"
-  },
+  "title": "",
+  "homepage": "",
+  "description": "",
+  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
   "keywords": [
     "boilerplate",
     "gulp",
