--- a/init/templates/general/src/package.json
+++ b/init/templates/general/src/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "projectname",
-  "version": "0.1.0",
-  "title": "Project Name",
-  "homepage": "www.projectname.com",
-  "description": "Description goes here",
   "private": true,
-  "author": {
-    "name": "Vitor Britto",
-    "url": "http://vitorbritto.com.br"
+  "name": "general",
+  "version": "0.1.0",
+  "title": "",
+  "homepage": "",
+  "description": "",
+  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
+  "license": "MIT",
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
   },
-  "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=1.2.15"
+  "scripts": {
+    "spec": "grunt spec",
+    "start": "grunt start",
+    "build": "grunt build"
   },
   "dependencies": {
     "browserify": "^4.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-browser-sync": "^1.5.2",
+    "grunt-browser-sync": "^2.1.3",
     "grunt-browserify": "^2.0.8",
     "grunt-bump": "0.0.16",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-compress": "^0.8.0",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-csslint": "^0.3.1",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-imagemin": "^0.8.1",
@@ -34,14 +37,13 @@
     "grunt-csscomb": "^3.0.0",
     "grunt-ftp-deploy": "^0.1.3",
     "grunt-grunticon": "^1.2.13",
-    "grunt-jsdoc": "^0.5.7",
     "grunt-mocha": "^0.4.11",
-    "grunt-newer": "^0.8.0",
-    "grunt-phantomas": "^0.10.0",
+    "grunt-pagespeed": "^1.0.0",
     "grunt-rsync": "^0.6.2",
     "grunt-shell": "^1.1.1",
-    "grunt-styleguide": "^0.2.17",
-    "grunt-uncss": "^0.3.7",
+    "grunt-sitespeedio": "^0.5.0",
+    "grunt-uncss": "^0.4.3",
+    "load-grunt-config": "^0.17.1",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   }
