--- a/init/templates/jqueryplugin/package.json
+++ b/init/templates/jqueryplugin/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "jquery-plugin-name",
+  "private": true,
+  "name": "jqueryplugin",
   "version": "0.1.0",
+  "title": "",
+  "homepage": "",
   "description": "",
+  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
+  "license": "MIT",
+  "main": "",
   "keywords": [
     "jquery-plugin",
     "jquery",
@@ -10,17 +16,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ambitiouswebkit/jquery-plugin-name.git"
+    "url": "git://github.com/vitorbritto/boilerplates.git"
   },
   "bugs": {
-    "url": "https://github.com/ambitiouswebkit/jquery-plugin-name/issues"
+    "url": "https://github.com/vitorbritto/boilerplates/issues"
   },
-  "author": {
-    "name": "Vitor Britto",
-    "email": "code@vitorbritto.com.br",
-    "url": "https://github.com/vitorbritto"
-  },
-  "license": "MIT",
+
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
