--- a/init/templates/npmpkg/package.json
+++ b/init/templates/npmpkg/package.json
@@ -1,30 +1,30 @@
 {
   "name": "pkgname",
   "version": "0.1.0",
+  "title": "",
+  "homepage": "",
   "description": "",
+  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
+  "license": "MIT",
+  "keywords": [
+    "pkgname"
+  ],
   "main": "index.js",
   "bin": {
     "pkgname": "bin/index.js"
   },
-  "engines": {
-    "node": ">=0.10.0"
-  },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "",
+    "build": ""
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/vitorbritto/pkgname"
   },
-  "keywords": [
-    "pkgname"
-  ],
-  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/vitorbritto/pkgname/issues"
   },
-  "homepage": "https://github.com/vitorbritto/pkgname",
   "devDependencies": {
     "chai": "*",
     "mocha": "*"
