--- a/init/templates/webapp/package.json
+++ b/init/templates/webapp/package.json
@@ -1,14 +1,11 @@
 {
   "private": true,
-  "name": "application-name",
+  "name": "webapp",
   "version": "0.1.0",
-  "title": "Project Name",
-  "description": "Project description goes here",
-  "author": {
-    "name": "Vitor Britto",
-    "url": "http://vitorbritto.com.br",
-    "email": "code@vitorbritto.com.br"
-  },
+  "title": "",
+  "homepage": "",
+  "description": "",
+  "author": "Vitor Britto <code@vitorbritto.com.br> (http://vitorbritto.com.br/)",
   "keywords": [
     "boilerplate",
     "gulp",
@@ -19,10 +16,6 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/vitorbritto/boilerplates.git"
-  },
-  "engines": {
-    "node": ">=0.10.0",
-    "npm": ">=1.2.15"
   },
   "bugs": {
     "url": "https://github.com/vitorbritto/boilerplates/issues"
